@@ -1069,3 +1069,4 @@ If a plan specifies features to be granted to domain owners, those features will
 Added --email-only flags to the list-users.pl and list-domains.pl API scripts.
 Added a button to the Edit Account Plan page to create a new plan cloned from an existing one.
 Added a Module Config option for additional gzip command-line parameters, like --best or --rsyncable.
+Re-factored code for deleting tables created by installed scripts, and better handle the case where a script's database is missing.
